Added final reward tooltips, added extra value labels, QoL changes for buttons and copy

--- a/index.html
+++ b/index.html
@@ -138,14 +138,19 @@
             <div class="label-green"> Acquired value: <span id="labelacquiredvalue">234</span></div>
 
             <div id="strategyinfocontainer">
-                <div>Optimal strategy: average expected value is <span id="labelaverageexpectedvalue" class="label-green">234</span></div>
                 <div>
-                    Safest strategy: min guaranteed value is <span id="labelminguaranteedvalue" class="label-green">234</span> 
-                    (<span id="labelminbetterchance">60.45%</span> to get more)
+                    Optimal strategy: average expected value is <span id="labelaverageexpectedvalue" class="label-green">234</span>
+                    (<span class="label-green">+</span><span id="labelaverageexpectedvaluemore" class="label-green">234</span>)
                 </div>
                 <div>
-                    Gamble maximum strategy: <span id="labelmaxgamblechance">100.00%</span> chance to get 
-                    maximum of <span id="labelmaxgamblevalue" class="label-green">234</span> value
+                    Safest strategy: min guaranteed value is <span id="labelminguaranteedvalue" class="label-green">234</span> 
+                    (<span class="label-green">+</span><span id="labelminguaranteedvaluemore" class="label-green">234</span>,
+                    <span id="labelminbetterchance">60.45%</span> to get more)
+                </div>
+                <div>
+                    Gamble maximum strategy: <span id="labelmaxgamblechance">100.00%</span> chance to get
+                    <span id="labelmaxgamblevalue" class="label-green">234</span>
+                    (<span class="label-green">+</span><span id="labelmaxgamblevaluemore" class="label-green">234</span>) max value
                 </div>
             </div>
             <div id="strategyquestisover" style="display: none;">
