Added link to GitHub repo

--- a/index.html
+++ b/index.html
@@ -122,8 +122,11 @@
         Implemented in JavaScript to be accessible within the web page.
         Additional constants (states, routes, outcomes) were computed in C++ with more expensive dynamic programming that allows 3 possible states per elixir.
     </p>
+    <p>
+        Source code: <a target="_blank" href="https://github.com/ATSTNG/BrotherhoodOfAlchemistsSolver/">github.com/ATSTNG/BrotherhoodOfAlchemistsSolver</a>
+    </p>
     
-    <p>Last updated at <span class="label-yellow">9 August 2023</span>, consistent with ToME version <span class="label-yellow">1.7.6</span></p>
+    <p>Last updated at <span class="label-yellow">14 August 2023</span>, consistent with ToME version <span class="label-yellow">1.7.6</span></p>
 </div>
 
 <table id="stattable">
